logs/Slang/chapter-8/8.10--static_methods.sv.log
name: static_methods
description: static class methods test
should_fail: 0
tags: 8.10
files: /home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.10--static_methods.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.10--static_methods.sv:8:2: error: language feature not yet supported
	class test_cls;
	^~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.10--static_methods.sv:15:2: error: use of undeclared identifier 'test_cls'
	test_cls test_obj0;
	^~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.10--static_methods.sv:16:2: error: use of undeclared identifier 'test_cls'
	test_cls test_obj1;
	^~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.10--static_methods.sv:19:15: error: language feature not yet supported
		test_obj0 = new;
		            ^~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.10--static_methods.sv:20:15: error: language feature not yet supported
		test_obj1 = new;
		            ^~~
